# ianalisador

./: .gitignore  README.md  app.py  env.example  pyproject.toml
src/data/: carregarvagas.py  vagas.json
src/ianalisador/: __init__.py
src/ianalisador/config/: settings.py
src/ianalisador/utils/: jobs.json  jobs_database.py
src/ianalisador/views/: main.py
src/services/: azure_ai_service.py
tests/: test_jobs_database.py
