[project]
name = "ianalisador"
version = "0.1.0"
description = ""
authors = [
    {name = "Lucas Gabriel",email = "lucasglsilva7@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "streamlit>=1.49.0,<2.0.0",
    "azure-ai-formrecognizer>=3.3.0",
    "python-dotenv>=1.0.0",
    "openai>=1.0.0"
]

[tool.poetry]
packages = [{include = "ianalisador", from = "src"}]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
